# ponde

./: Cargo.toml  LICENSE  README.md  ponde.service
.github/workflows/: ci.yml
src/: app.rs  config.rs  default_libinput_interface.rs  device_fd.rs  errors.rs  inspect_event.rs  main.rs  sink_device.rs  sink_event.rs
src/config/: accel_profile.rs  button.rs  device.rs  device_info.rs  match_rule.rs  scroll_factor.rs
