[package]
name = "ponde"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Pointing device configurationd daemon for Wayland and X11 using libinput and uinput."
repository = "https://github.com/buzztaiki/ponde"

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive", "deprecated"] }
evdev = "0.12.0"
input = "0.7.1"
libc = "0.2.132"
nix = "0.25.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.10"
thiserror = "1.0.32"

[dev-dependencies]
serde_test = "1.0.144"
