[package]
name = "ponde"
version = "0.2.0"
edition = "2024"
description = "Pointing device configuration daemon for Wayland and X11 using libinput and uinput."
repository = "https://github.com/buzztaiki/ponde"
license = "MIT"

[dependencies]
anyhow = "1.0.62"
clap = { version = "4.5.53", features = ["deprecated", "derive"] }
env_logger = "0.11.8"
evdev = "0.13.2"
input = "0.9.1"
log = "0.4.29"
nix = { version = "0.30.1", features = ["fs", "ioctl", "poll"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.10"
thiserror = "2.0.17"

[dev-dependencies]
serde_test = "1.0.144"
tempfile = "3.24.0"
